# CS1230-Final-Project

./: CMakeLists.txt  README.md
resources/shaders/: 2D.frag  2D.vert  default.frag  default.vert  post_processing.frag  screen_quad.vert
scenefiles/lights-camera/extra_credit/: castle.json
scenefiles/lights-camera/required/: castle.json
src/: camera.cpp  camera.h  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h
src/utils/: cone.cpp  cube.cpp  cylinder.cpp  sceneparser.cpp  sceneparser.h  sphere.cpp  sphere.h
